.metadata/.plugins/org.eclipse.cdt.ui/ARM_Bootloader.build.log
20:13:34 **** Incremental Build of configuration Debug for project ARM_Bootloader ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/Bootloader.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Bootloader.d" -MT"Core/Src/Bootloader.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/Bootloader.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/Bootloader.c:11:
../Core/Inc/Bit_Math.h:9: warning: "SET_BIT" redefined
    9 | #define SET_BIT(VAR,BIT)          VAR |=  (1 << (BIT))
      | 
In file included from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h:29,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h:27,
                 from ../Core/Inc/stm32f1xx_hal_conf.h:238,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/Bootloader.c:10:
../Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h:177: note: this is the location of the previous definition
  177 | #define SET_BIT(REG, BIT)     ((REG) |= (BIT))
      | 
../Core/Src/Bootloader.c: In function 'Bootloader_EraseData':
../Core/Src/Bootloader.c:20:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'static'
   20 | static uint8_t LineCheckSum_Calculate(uint8_t arr[] ,uint8_t length)
      | ^~~~~~
../Core/Src/Bootloader.c:30:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   30 | {
      | ^
../Core/Src/Bootloader.c:43:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   43 | {
      | ^
../Core/Src/Bootloader.c:216:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  216 | {
      | ^
../Core/Src/Bootloader.c:238:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  238 | {
      | ^
../Core/Src/Bootloader.c:253:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  253 | {
      | ^
../Core/Src/Bootloader.c:270:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  270 | {
      | ^
../Core/Src/Bootloader.c:278: error: expected '{' at end of input
In file included from ../Core/Src/main.c:50:
../Core/Inc/Bit_Math.h:9: warning: "SET_BIT" redefined
    9 | #define SET_BIT(VAR,BIT)          VAR |=  (1 << (BIT))
      | 
At top level:
../Core/Src/Bootloader.c:18:13: warning: 'Bootloader_EraseData' defined but not used [-Wunused-function]
   18 | static void Bootloader_EraseData(void)
      |             ^~~~~~~~~~~~~~~~~~~~
In file included from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h:29,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h:27,
                 from ../Core/Inc/stm32f1xx_hal_conf.h:238,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h:177: note: this is the location of the previous definition
  177 | #define SET_BIT(REG, BIT)     ((REG) |= (BIT))
      | 
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:98:3: warning: implicit declaration of function 'Bootloader_Init'; did you mean 'Bootloader_main'? [-Wimplicit-function-declaration]
   98 |   Bootloader_Init();
      |   ^~~~~~~~~~~~~~~
      |   Bootloader_main
make: *** [Core/Src/subdir.mk:37: Core/Src/Bootloader.o] Error 1
../Core/Src/main.c:99:11: warning: unused variable 'flag' [-Wunused-variable]
   99 |   uint8_t flag = 0;
      |           ^~~~
make: *** Waiting for unfinished jobs....
In file included from ../Core/Src/main.c:50:
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Inc/Bit_Math.h:9:46: warning: left shift count >= width of type [-Wshift-count-overflow]
    9 | #define SET_BIT(VAR,BIT)          VAR |=  (1 << (BIT))
      |                                              ^~
../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h:527:41: note: in expansion of macro 'SET_BIT'
  527 |                                         SET_BIT(RCC->APB2ENR, RCC_APB2ENR_IOPDEN);\
      |                                         ^~~~~~~
../Core/Src/main.c:197:3: note: in expansion of macro '__HAL_RCC_GPIOD_CLK_ENABLE'
  197 |   __HAL_RCC_GPIOD_CLK_ENABLE();
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'UART_1_RECEIVE':
../Core/Src/main.c:227:38: warning: statement with no effect [-Wunused-value]
  227 |                         timeout_flag == 1;
      |                         ~~~~~~~~~~~~~^~~~
"make -j8 all" terminated with exit code 2. Build might be incomplete.

20:13:35 Build Failed. 10 errors, 7 warnings. (took 918ms)

